--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,18 @@
     "@radix-ui/themes": "^3.1.3",
     "@urql/core": "^5.0.6",
     "@urql/next": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.28",
     "graphql": "^16.9.0",
     "graphql-ws": "^5.16.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "subscriptions-transport-ws": "^0.11.0",
-    "urql": "^4.1.0"
+    "tailwind-merge": "^2.5.2",
+    "urql": "^4.1.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
