--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_HASURA_ENDPOINT='localhost:8080/v1/graphql'
-NEXT_PUBLIC_HASURA_SECRET='mysecretkey'
+NEXT_PUBLIC_HASURA_ENDPOINT=localhost:8080/v1/graphql
+NEXT_PUBLIC_HASURA_SECRET=mysecretkey
